[project]
name = "construction-safety-monitor"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "tabulate>=0.10.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
    "ultralytics>=8.4.78",
    "wandb>=0.28.0",
]
